# SMSE-Backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  STORAGE.md  docker-compose.yaml  example.env  pyproject.toml  seed.py  swagger.json
.github/workflows/: docker-build.yml
migrations/versions/: 070414f2e1a7_.py  1f06b2fc9cc2_increase_embedding_dimenions_to_1024.py  3119415bcb82_make_search_record_content_id_unique_to_.py  3a61afcf31ae_initial.py  3b251aa30fc4_add_task.py  86f6598a9ddd_.py  9ec95ec6fcd3_set_unique_to_false_for_embedding_model_.py  ab56a45ffbcc_add_thumbnail_path_to_content_table.py  c5c3be8af83d_add_modality_field_to_embeddings_table.py  da28b66f399d_set_content_user_id_unique_attribute_to_.py  e4835d7ab10b_make_embedding_id_nullable_in_contents_.py  f8cfd819c681_added_prefernces_column_to_user_table_.py  fd53eae58bbd_removed_unique_constraint_from_user_id_.py
smse_backend/: __init__.py  app.py  celery_app.py  celery_worker.py  tasks.py
smse_backend/app/: __init__.py  run.py
smse_backend/app/config/: base.py  development.py
smse_backend/app/models/: __init__.py  base.py  content.py  embedding.py  embeding.py  model.py  query.py  search_record.py  user.py
smse_backend/app/routes/: __init__.py  auth.py  main.py
smse_backend/config/: base.py  production.py  test.py
smse_backend/models/: __init__.py  base.py  content.py  embedding.py  model.py  query.py  search_record.py  task.py  user.py
smse_backend/routes/: __init__.py  auth.py  content.py  search.py  task.py  user.py
smse_backend/routes/v1/: __init__.py  auth.py  content.py  file_upload.py  index.py  search.py  user.py
smse_backend/services/: __init__.py  embedding.py  file_cleanup.py  file_storage.py  search.py  thumbnail.py
smse_backend/utils/: __init__.py  file_extensions.py
tests/: conftest.py  test_content.py  test_embedding.py  test_query.py
tests/test_models/: test_content.py  test_embedding.py  test_model.py  test_query.py  test_search_record.py  test_user.py
tests/test_routes/: test_auth.py  test_content.py  test_index.py  test_multimodal_search.py  test_multipart_search.py  test_search.py  test_user.py
tests/test_services/: test_thumbnail.py
