[tool.poetry]
name = "smse-backend"
version = "0.1.0"
description = ""
authors = ["Ahmedsaed <ahmedsaed2652003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.0"
python-dotenv = "^1.0.1"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"
gunicorn = "^23.0.0"
flask-swagger-ui = "^4.11.1"
celery = "^5.3.6"
redis = "^5.0.1"
boto3 = "^1.34.0"
pillow = "^11.2.1"
flask-cors = "^6.0.1"

[tool.poetry.group.worker.dependencies]
smse = { git = "https://github.com/smse-org/smse.git", branch = "main", extras = ["all"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# add entry point
[tool.poetry.scripts]
smse-backend = "smse_backend.app:main"

[tool.pytest.ini_options]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]